--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
          {% endif %}
          {% if site.github.is_user_page %}
-         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+         <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a></p>
          {% endif %}
          {% if site.show_downloads %}
          <ul class="downloads">
