--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
          {% if site.github.is_user_page %}
          <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a></p>
          {% endif %}
+         <p class="view"><a href="/pdf/JingWangResumeGeneric2025v1.1.pdf">Resume</a></p>
          {% if site.show_downloads %}
          <ul class="downloads">
             <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
