--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,7 @@
    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      
+      gtag('js', new Date());      
       gtag('config', '{{ site.google_analytics }}');
    </script>
    {% endif %}
@@ -19,7 +18,12 @@
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
-</head>
+   <style>
+      p.small {
+         line-height: 1.2;
+      }
+   </style>
+   </head>
 <body>
    <div class="wrapper">
       <header>
@@ -29,12 +33,13 @@
          {% endif %}
          <p>{{ site.description | default: site.github.project_tagline }}</p>
          {% if site.github.is_project_page %}
-         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+         <p class="small"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
          {% endif %}
          {% if site.github.is_user_page %}
-         <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a></p>
+         <p class="small"><a href="{{ site.github.owner_url }}">GitHub</a></p>
          {% endif %}
-         <p class="view"><a href="/pdf/JingWangResumeGeneric2025v1.1.pdf">Resume</a></p>
+         <p class="small"><a href="pdf/JingWangResumeGeneric2025v1.1.pdf">Resume<br></a></p>
+         
          {% if site.show_downloads %}
          <ul class="downloads">
             <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
@@ -43,6 +48,7 @@
          </ul>
          {% endif %}
       </header>
+      <!-- <br /><br /> -->
       <section>
          {{ content }}
       </section>
