--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
          <p class="small"><a href="{{ site.github.owner_url }}">GitHub</a></p>
          {% endif %}
          <p class="small"><a href="pdf/JingWangResumeGeneric2025v1.1.pdf">Resume<br></a></p>
-         <p class="small"><a href="{{ site.linkedIn }}">Resume<br></a></p>
+         <p class="small"><a href="{{ site.linkedIn }}"><br></a></p>
          
          {% if site.show_downloads %}
          <ul class="downloads">
