--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,11 +38,8 @@
          {% if site.github.is_user_page %}
          <p class="small"><a href="{{ site.github.owner_url }}">GitHub</a></p>
          {% endif %}
-
-         <!-- <p class="small"><a href="pdf/JingWangResumeGeneric2025v1.1.pdf">Resume<br></a></p> -->
-         
-         <p class="small"><a href="{{ site.linkedIn }}">LinkedIn</a></p>
-         <p class="small"><a href="{{ site.stackoverflow }}">Stack Overflow</a></p>
+         <p class="small"><a href="{{ site.linkedIn }}"></a></p>
+         <p class="small"><a href="{{ site.stackoverflow }}"></a></p>
          
          {% if site.show_downloads %}
          <ul class="downloads">
