--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@
          {% if site.github.is_user_page %}
          <p class="small"><a href="{{ site.github.owner_url }}">GitHub</a></p>
          {% endif %}
-         <p class="small"><a href="{{ site.linkedIn }}">A</a></p>
-         <p class="small"><a href="{{ site.stackoverflow }}">B</a></p>
+         <p class="small"><a href="{{ site.linkedIn }}">LinkedIn</a></p>
+         <p class="small"><a href="{{ site.stackoverflow }}">Stack Overflow</a></p>
          
          {% if site.show_downloads %}
          <ul class="downloads">
